grpc-example/grpc-example-scala/kubernetes/hello-impl.yml
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "hello-impl-v1-0-snapshot"
  labels:
    appName: hello-impl
    appNameVersion: "hello-impl-v1-0-snapshot"
spec:
  replicas: 1
  selector:
    matchLabels:
      appNameVersion: "hello-impl-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: helloworld.GreeterService
        appNameVersion: "hello-impl-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: hello-impl
          image: "hello-impl:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 11000
              name: http
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: helloworld.GreeterService
  name: helloworld.GreeterService
spec:
  ports:
    - name: http
      # should be found by service discovery - do we need this at all?
      port: 11000
      protocol: TCP
      targetPort: 9000
  selector:
    appName: helloworld.GreeterService
