grpc-example/grpc-example-scala/kubernetes/hello-proxy-impl.yml
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "hello-proxy-v1-0-snapshot"
  labels:
    appName: hello-proxy
    appNameVersion: "hello-proxy-v1-0-snapshot"
spec:
  replicas: 1
  selector:
    matchLabels:
      appNameVersion: "hello-proxy-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: hello-proxy
        appNameVersion: "hello-proxy-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: hello-proxy
          image: "hello-proxy-impl:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: hello-proxy
  name: hello-proxy
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    appName: hello-proxy
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: hello-proxy
spec:
  rules:
    - host: "superservice.com"
      http:
        paths:
          - backend:
              serviceName: hello-proxy
              servicePort: 9000
